# mydealz-api

./: README.md  pyproject.toml
mydealz_api/: __init__.py
