[tool.poetry]
name = "mydealz-api"
version = "0.1.0"
description = "Basic interface to call the Mydealz API."
authors = ["Torben H. Pfohl <torben.pfohl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
